--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -13,7 +13,8 @@
     "mocha": "^1.21.5"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha test.js",
+    "checkVersion": "mocha --version",
     "start": "node server.js"
   },
   "repository": {
